# calendar-agent

./: README.md  account_manager.py  calendar_agents.py  calendar_tools.py  credentials.json  googleapis.py  main.py  prompts.py  pyproject.toml  requirements.txt  service_account_file.json  vectorstore.py
token_files/: token_calendar_v3_default.json  token_calendar_v3_personal.json  token_default.json  token_personal.json
